--- a/backstage-app/templates/argo-workflows/skeleton/catalog-info.yaml
+++ b/backstage-app/templates/argo-workflows/skeleton/catalog-info.yaml
@@ -2,9 +2,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.component_id | dump}}
-  {%- if values.description %}
-  description: ${{values.description | dump}}
-  {%- endif %}
+  title: 'Argo Workflow'
+  description: Argo Workflow Template
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     backstage.io/techdocs-ref: dir:.
