Modify Argo Workflow template

--- a/backstage-app/templates/argo-workflows/skeleton/catalog-info.yaml
+++ b/backstage-app/templates/argo-workflows/skeleton/catalog-info.yaml
@@ -1,13 +1,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.component_id | dump}}
+  name: argoworkflow
   title: 'Argo Workflow'
   description: Argo Workflow Template
   annotations:
-    github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
-    backstage.io/techdocs-ref: dir:.
+    github.com/project-slug: tonzthomas/backstage
 spec:
   type: service
   lifecycle: experimental
-  owner: ${{values.owner | dump}}
+  owner: guests
